# Simple-Digit-Recognition

./: Console.py  Main.py  Network.py  README.md  Utils.py  pyproject.toml
models/: 90.npz  new.npz  ultima2_67.npz
theme/: theme.json
