[tool.poetry]
name = "neural network"
version = "0.1.0"
description = "A neural network from ground up"
authors = ["Sjnosuke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
pygame-ce = "^2.5.0"
pygame-menu-ce = "^4.4.3"
opencv-python = "^4.10.0.84"
pygame-gui = "^0.6.12"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
